www/css/index.css
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}


body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    background-color:#3B3738;
    /*font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;*/
    font-family: 'Raleway', sans-serif;
    font-size:12pt;
    height:100vh;
    margin:0px;
    padding:0px;
    width:100vw;
    color:#FDF3E7;
}


p{
    margin:0px;
}

/*input,select{
    size: 20;
    border-radius:3px;
    border: 1px solid MidnightBlue;
    box-shadow: none;
    height:30px;
    width:100%;
    margin-bottom:20px;
    background: transparent;
    padding: 5px 0px;
}*/
select{
    height:42px;
    box-shadow: none;
    background: transparent;
    background-image: none;
    -webkit-appearance: none;
     background: url("data:image/png;base64,R0lGODlhDwAUAIABAAAAAP///yH5BAEAAAEALAAAAAAPABQAAAIXjI+py+0Po5wH2HsXzmw//lHiSJZmUAAAOw==") no-repeat 97% 50%;
}
.links{
    text-decoration: none;
    color:#2196F3;
}

.slide{
    min-width:100vw;
    min-height:100vh;
}

#CLIENTID{
    display:none;
}
#map { 
    clear:both;
    height: 90vh; } /* will become height:80%;*/#truck-map{
    clear: both;
    height:70vh;
}

#top-banner{
    background-color: #3B3738;
    height:10vh;
    /*border-bottom: 1vh solid #C63D0F;*/
    } /* " height:7%;*/





#NearMe{
    /*display: inline-block;*/
    /*text-align: center;*/
    color: #FDF3E7;
/*verticle centering:*/
    position: relative;
    top:50%;
    transform: translateY(-50%);

}
#loc{
    float:left;
    display: none;
}
#num{
    float:right;
    display: none;

}

#bottom-banner{
    height:7vh;
    position:fixed;
    bottom:0;
    right:10vw;
    font-size: 16pt;
}


#login-slide{
    height:100%;
}
#map-slide{
    height:100vh;
/*    display:none;
*/}
#truck-slide{
    height:100vh;
}


/* Landscape layout (with min-width) */
@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
    .app {
        background-position:left center;
        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                      /* offset horizontal: half of image width and text area width */
    }
}

h1 {
    font-size:24px;
    font-weight:normal;
    margin:0px;
    overflow:visible;
    padding:0px;
    text-align:center;
}

/*--------------Signup Pages--------------*/
#submit-button{
    font-weight: bold;
    font-size: 12pt;
    color: white;
    background-color: #3B3BA8;
    margin-top:20px;
    height: 42px;
}

#centerer{
  border-radius:4px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width:70vw;
  background-color: #6E6E6E;
  padding:20px;
  /*background-color: #5890ff;*/
}
#signup-truckpicpreview{
  max-width: 100px;
}

/*--------------Top Bar------------------*/
.ui-icon-loading{
    display: none;
}
#refresh{
/*    height:5vh;*/
    text-align: right;
    display: inline-block;
/*    position:relative;*/
/*    transform: translateY(-50%);
*/    margin:0px;
/*    vertical-align: text-bottom;
*/    color: #67E09B;
    cursor:pointer;
    font-weight: bold;
    position: relative;
    top:50%;
    transform: translateY(-50%);
}

#hamburger{
    height:5vh;
    text-align: left;
    float: left;
    display: block;
    color: #C63D0F;
    position: relative;
    top:50%;
    transform: translateY(-50%);
    margin: 0 20px;
    /*z-index: 2;*/
    /*display: none;*/
}
/*.ui-widget{*/
.ui-autocomplete{
    padding:0px;
    margin:0px;
}
.search-input{
    font-family: 'Raleway', sans-serif;
    font-size:12pt;
    width:100%;
    border:none;
    height:30px;
    padding-left:10px;
}
#search{
    display:inline-block;
    width:70%;
    background-color: #3B3738;
    margin: 0 auto;
    position: relative;
    top:50%;
    transform: translateY(-50%);
}
.ui-menu-item{
    background-color: #FDF3E7;
    color: black;
    list-style-type: none;
    padding: 0px;
    /*width:158px;*/
    width:70%;
    padding:10px 0px 10px 10px;
}
/*The nosebleed section*/

/*--------------Menu Things--------------*/
#menu-hider{
    position: fixed;
    top:0px;
    right:0px;
    width: 25vw;
    height: 100vh;
    /*background-color: blue;*/
    display: none;
    z-index:3; 
}

#menu{
    position: fixed;
    top:0px;
    width: 75vw;
    max-width: 300px;
    left:-75vw;
    height: 100vh;
    /*border-right:2px solid #3B3BA8;*/
    background-color: #FDF3E7;
    color: black;
    /*display: none;*/
    z-index: 3;
}

.menu-item{
    width:100%;
    height:50px;
}


.menu-icon{
    position: relative;
    top:50%;
    transform: translateY(-50%);
    height:50%;
    display: inline-block;
    margin-left: 15px;
}

.menu-text{
    font-size:100%;
    /*verticle centering:*/
    position: relative;
    top:50%;
    transform: translateY(-50%);
    vertical-align: top;
    margin-left: 40px;
    display: inline-block;
}

.sub-menu {
    display: none;
}

.sub-menu-item {
    width:100%;
    height:30px;
    margin: 5px 0 5px 0;
    /*border-bottom: 1px solid #7E8F7C;;*/
}
.sub-menu-item-fav {
    width:100%;
    height:30px;
    margin: 5px 0 5px 0;
    /*border-bottom: 1px solid #7E8F7C;;*/
}
.sub-menu-item-fav-text{
    font-size:100%;
    /*verticle centering:*/
    position: relative;
    top:50%;
    transform: translateY(-50%);
    vertical-align: top;
    margin-left: 40px;
    display: inline-block;
    /*color:black;*/
}

.sub-menu-item-line {
    width:80%;
    height: 1px;
    background-color:rgba(0, 0, 0, .2);
    margin:auto;
}

.sub-menu-item-text{
    font-size:100%;
    /*verticle centering:*/
    position: relative;
    top:50%;
    transform: translateY(-50%);
    vertical-align: top;
    margin-left: 40px;
    display: inline-block;
    /*color:black;*/
}
.sub-menu-item-icon{
    /*position: relative;*/
    position:absolute;
    height:20px;
    right: 15%;
    margin-top: 5px; /*Hard-coded cheating!*/
    display:inline;
    /*vertical centering*/
    /*top:50%;*/
    /*transform: translateY(-50%);*/
    /*display: inline-block;*/
/*    display: inline-flex;
    flex-direction: column;
    justify-content: center;
*/
}

/*--------------POP UP on map page-------------*/

#map-popup{
    position: fixed;
/*    bottom:-13vh;
    height:13vh;*/
    bottom:calc(-80px);
    /*bottom:calc(-80px+1vh);*/
    height:80px;
    width:100vw;
    background-color: #3B3738;
    /*border-top: 1vh solid #7E8F7C;*/
    /*display: none;*/
    /*padding:5px;*/
}

#truckpic{
    height:90%;
    float:left;
    display: inline-block;
    margin-left: .65vh;
    /*verticle centering:*/
    position: relative;
    top:50%;
    transform: translateY(-50%);
}

#poptext{
    width:75%;
    float:left;
    position:absolute;
    color:#FDF3E7;
    /*left:140px;*/
    display: inline-block;
    margin-top: 5px;
    margin-left: 5px; 
}

#namebox{
    font-size:16pt;
    /*font-weight:bold;*/
    float:left;
    display: inline-block;
    width:100%;
    margin-bottom: 7px;
}

#ratingreview{
    display: inline-block;
    /*float:left;*/
    color:#f1c40f;
    font-size:16pt;
    /*display: none;*/
}

#messagetext{
    display:inline-block;
    margin-bottom:3px;
    font-size: 6pt;
    text-overflow: ellipsis;
    display: none;
}

#popup-details{
    float:right;
    margin-right:5px;
    font-weight: bold;
    cursor:pointer;
    display: none;
}

#tagbox{
/*    display:inline-block;
    width:50%;
    margin:7px 0 0 5px;
    /*height:10%;*/*/
}

.tags{

/*    background-color: #42c0fb;
    color:black;
    display:inline-block;
    font-size: 70%;
    padding:1px;
    margin-right:5px;
    border-radius:10px;
    padding: 0 7px 0 7px;*/
}

